--- a/slides.html
+++ b/slides.html
@@ -1,18 +1,128 @@
 <html>
-	<head>
-		<link rel="stylesheet" href="node_modules/reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="node_modules/reveal.js/css/theme/white.css">
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
+
+<head>
+	<link rel="stylesheet" href="node_modules/reveal.js/css/reveal.css">
+	<link rel="stylesheet" href="node_modules/reveal.js/css/theme/sky.css">
+	<link rel="stylesheet" href="node_modules/bootstrap3/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="node_modules/bootstrap3/dist/css/bootstrap-theme.min.css">
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+</head>
+
+<body>
+
+	<div class="reveal">
+		<div class="slides">
+			<section data-background="images/blake-connally-373084.jpg">
+				<div class="row">
+					<div class="col-lg-12">
+						<img src="images/vue.png" class="pull-left plain" style="background: none; height: 200px; width: 200px;">
+						<h3 style="color: #fff;">A beginner's first view into Vue.js. Pun intended...</h3>
+					</div>
+				</div>
+			</section>
+			<section>
+				<h3>About
+					<span class="text-primary">Heath Murphy, PMP, MCSD</span>
+				</h3>
+				<div class="row">
+					<div class="col-lg-3">
+						<img src="images/Murphy.png">
+					</div>
+					<div class="col-lg-6">
+						<ul>
+							<li>I'm a solution architect working for a pretty kick ass consulting company, HMB
+							</li>
+							<li>I do a little bit of everything</li>
+							<li>I live in Columbus, Ohio therefore that makes me a huge Ohio State Buckeye fan. It's a state law!</li>
+							<li>I like Cats</li>
+							<li>I
+								<i class="fas fa-heart" style="color:orange"></i> Pumpkin Beer</li>
+							<li>And yes... I look very much like these guys:</li>
+						</ul>
+					</div>
+					<div class="col-lg-3">
+							<img src="images/whatami.png">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-4">
+						<img src="images/cat.png">
+					</div>
+					<div class="col-lg-4">
+						<div class="row">
+							<div class="col-lg-4">
+								<img src="images/pumpkin.jpg" style="margin: 20px;">
+							</div>
+							<div class="col-lg-4">
+								<i class="fas fa-plus"></i>
+							</div>
+							<div class="col-lg-4">
+								<img src="images/beer.jpg" style="margin: 20px;">
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="row">
+							<div class="col-lg-6">
+								<img src="images/woody.png">
+							</div>
+							<div class="col-lg-6">
+								<img src="images/heman.png">
+							</div>
+						</div>
+
+					</div>
+				</div>
+
+			</section>
+			<section>Agenda</section>
+			<section>What is Vue.js?</section>
+			<section>Quick History Lesson</section>
+			<section>Comparison of Frameworks</section>
+			<section>Getting Started
+				<section>Official Documentation</section>
+				<section>Install via NPM</section>
+				<section>Vue CLI</section>
+			</section>
+			<section>Hello World!</section>
+			<section>Vue.js Basics
+				<section>Declarative Rendering</section>
+				<section>Directives (v-bind)</section>
+				<section>Conditionals and Loops</section>
+				<section>Handlng events and User Input</section>
+				<section>The Vue Object and Lifecycle</section>
+				<section>More on Directives (classes) *shorthand!</section>
+				<section>Forms (v-model)</section>
+				<section>Computed and Watchers</section>
+			</section>
+			<section>Vue.js Components
+				<section>Template Syntax and Basics</section>
+				<section>Global, local and child Components</section>
+				<section>Props</section>
+				<section>Slots</section>
+				<section>Emiters</section>
+			</section>
+			<section>Vue SPA (plugins)
+				<section>The .vue file</section>
+				<section>Build Tools</section>
+				<section>Vue-router</section>
+				<section>Vuex</section>
+				<section>Vee-validate</section>
+			</section>
+			<section>Debugging (Vue Chrome Plugin)</section>
+			<section>Questions?</section>
 		</div>
-		<script src="node_modules/reveal.js/js/reveal.js"></script>
-		<script>
-			Reveal.initialize();
-		</script>
-	</body>
+	</div>
+	<script src="node_modules/reveal.js/js/reveal.js"></script>
+	<script src="node_modules/jquery/dist/jquery.js"></script>
+	<script src="node_modules/bootstrap3/dist/js/bootstrap.min.js"></script>
+	<script>
+		Reveal.initialize({
+			center: false,
+			width: '100%',
+			height: '100%'
+		});
+	</script>
+</body>
+
 </html>
