Agenda and What is slides

--- a/slides.html
+++ b/slides.html
@@ -41,7 +41,7 @@
 						</ul>
 					</div>
 					<div class="col-lg-3">
-							<img src="images/whatami.png">
+						<img src="images/whatami.png">
 					</div>
 				</div>
 				<div class="row">
@@ -75,10 +75,65 @@
 				</div>
 
 			</section>
-			<section>Agenda</section>
-			<section>What is Vue.js?</section>
-			<section>Quick History Lesson</section>
-			<section>Comparison of Frameworks</section>
+			<section>
+				<h2>Agenda</h2>
+				<br>
+				<ul>
+					<li>What is Vue.js and how does it compare?</li>
+					<li>Getting Started</li>
+					<li>Hello World - Vue.js Basics</li>
+					<li>Components</li>
+					<li>Vue.js as a SPA using official Plugins</li>
+				</ul>
+			</section>
+			<section>
+				<h2>What exactly is Vue.js?</h2>
+				<div class="row">
+					<div class="col-lg-3">
+						<img src="images/bearded-dude.jpg">
+						<a href='https://www.freepik.com/free-vector/vector-pop-art-illustration-of-a-brutal-bearded-man-macho-with-tatoo_1215957.htm'>Designed by Freepik</a>
+					</div>
+					<div class="col-lg-9">
+						<p>Vue is a progressive front-end JavaScript framework that focuses on... well... the view.</p>
+						<ul>
+							<li>Templates (Html-ish), Reactivity (2-way binding), Components (widgets)</li>
+							<li>Progressive - Use as little or as much as you like. Very little oppinions.</li>
+							<li>You can drop it into your .Net or Java project with a simple script tag!!</li>
+							<li>Uses a virtual DOM, all the rage these days</li>
+							<li>Uses "official" (and unofficial) plugins to become a full featured SPA</li>
+							<li>Supports most modern tooling and build systems, Webpack, Gulp, etc.</li>
+						</ul>
+						<p>Quick History Lesson... Vue.js has it's roots in AngularJS. The best parts were "extracted out".</p>
+					</div>
+			</section>
+			<section>Comparison of Frameworks
+				<table>
+					<thead>
+						<tr>
+							<th>Item</th>
+							<th>Value</th>
+							<th>Quantity</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Apples</td>
+							<td>$1</td>
+							<td>7</td>
+						</tr>
+						<tr>
+							<td>Lemonade</td>
+							<td>$2</td>
+							<td>18</td>
+						</tr>
+						<tr>
+							<td>Bread</td>
+							<td>$3</td>
+							<td>2</td>
+						</tr>
+					</tbody>
+				</table>
+			</section>
 			<section>Getting Started
 				<section>Official Documentation</section>
 				<section>Install via NPM</section>
@@ -111,18 +166,18 @@
 			</section>
 			<section>Debugging (Vue Chrome Plugin)</section>
 			<section>Questions?</section>
+			</div>
 		</div>
-	</div>
-	<script src="node_modules/reveal.js/js/reveal.js"></script>
-	<script src="node_modules/jquery/dist/jquery.js"></script>
-	<script src="node_modules/bootstrap3/dist/js/bootstrap.min.js"></script>
-	<script>
-		Reveal.initialize({
-			center: false,
-			width: '100%',
-			height: '100%'
-		});
-	</script>
+		<script src="node_modules/reveal.js/js/reveal.js"></script>
+		<script src="node_modules/jquery/dist/jquery.js"></script>
+		<script src="node_modules/bootstrap3/dist/js/bootstrap.min.js"></script>
+		<script>
+			Reveal.initialize({
+				center: false,
+				width: '100%',
+				height: '100%'
+			});
+		</script>
 </body>
 
 </html>
