Made it through computed

--- a/slides.html
+++ b/slides.html
@@ -266,13 +266,15 @@
 					<a href="/slide-examples/11-v-on.html" target="_blank">Example 11</a>
 					<br>
 				</section>
-				<section><strong>The Vue Object and Life cycle</strong>
+				<section>
+					<strong>The Vue Object and Life cycle</strong>
 					<br>
 					<img src="images/vue-lifecycle.PNG" style="height:500px; width:300px">
 					<br>
 					<a href="/slide-examples/12-vue-object.html" target="_blank">Example 12</a>
 				</section>
-				<section>More on Directives (css classes)
+				<section>
+					<strong>More on Directives (css classes)</strong>
 					<p>Using JavaScript to manipulate css classes is so super common that Vue has helpers.... well to help you =)</p>
 					<br>
 					<a href="/slide-examples/13-classes.html" target="_blank">Example 13</a>
@@ -282,11 +284,26 @@
 					<a href="/slide-examples/15-shortcuts.html" target="_blank">Example 15</a>
 					<br>
 				</section>
-				<section>Forms (v-model)
-
+				<section>
+					<strong>Forms (v-model)</strong>
+					<p>Let's sprinkle in a little bit of unicorn dust... A little bit of two-way automagic binding/p>
+						<br>
+						<a href="/slide-examples/16-v-model.html" target="_blank">Example 16</a>
+						<br>
+						<a href="/slide-examples/17-v-model.html" target="_blank">Example 17</a>
+						<br>
+						<a href="/slide-examples/18-v-model.html" target="_blank">Example 18</a>
+						<br>
 				</section>
-				<section>Computed and Watchers
-
+				<section>
+					<strong>Computed and Watchers</strong>
+					<p>Computed properties allow you to "do more" with your bound values without calling a function. Benefit??? Vue caches
+						and handles dependencies</p>
+					<a href="/slide-examples/19-computed.html" target="_blank">Example 19</a>
+					<br>
+					<p>Watchers are more generic and allow us to react to changes by making asynchronous calls. AJAX</p>
+						<a href="/slide-examples/19-computed.html" target="_blank">Example 19</a>
+						<br>
 				</section>
 			</section>
 			<section>Vue.js Components
