Made it through slots

--- a/slides.html
+++ b/slides.html
@@ -302,16 +302,45 @@
 					<a href="/slide-examples/19-computed.html" target="_blank">Example 19</a>
 					<br>
 					<p>Watchers are more generic and allow us to react to changes by making asynchronous calls. AJAX</p>
-						<a href="/slide-examples/19-computed.html" target="_blank">Example 19</a>
-						<br>
+					<a href="/slide-examples/20-watcher.html" target="_blank">Example 20</a>
+					<br>
 				</section>
 			</section>
-			<section>Vue.js Components
-				<section>Template Syntax and Basics</section>
-				<section>Global, local and child Components</section>
-				<section>Props</section>
-				<section>Slots</section>
-				<section>Emiters</section>
+			<section>
+				<span class="pull-left">Vue.js Components</span>
+				<section>
+					<strong>What the heck are components?</strong>
+					<p>Components are all the rage these days... They are old skool. Let me show what we're going to build for the rest of
+						this talk...
+						<a href="/images/components.jpg" target="_blank">My D&amp;D Sheet</a>
+						<br>All Vue components are also Vue instances
+					</p>
+					<a href="/slide-examples/21-components.html" target="_blank">Example 21</a>
+				</section>
+				<section>
+					<strong>Global and 'local' as child Components</strong>
+					<p>Components can be created and scoped Global or locally</p>
+					<a href="/slide-examples/22-components.html" target="_blank">Example 22</a>
+				</section>
+				<section>
+					<strong>Props Down</strong>
+					<p>We pass props... properties down to child components.</p>
+					<a href="/slide-examples/23-components.html" target="_blank">Example 23</a>
+					<br>
+					<a href="/slide-examples/24-components.html" target="_blank">Example 24</a>
+				</section>
+				<section>
+					<strong>Emit Up</strong>
+					<p>Child components can Emit up events to their parents</p>
+					<br>
+					<a href="/slide-examples/25-components.html" target="_blank">Example 25</a>
+				</section>
+				<section>
+					<strong>Slots</strong>
+					<p>Slots allow for custom parent content to be injected into the child</p>
+					<br>
+					<a href="/slide-examples/26-components.html" target="_blank">Example 26</a>
+				</section>
 			</section>
 			<section>Vue SPA (plugins)
 				<section>The .vue file</section>
