Finished all slides and material... First draft done

--- a/slide-examples/11-v-on.html
+++ b/slide-examples/11-v-on.html
@@ -23,6 +23,7 @@
         methods: {
             onSubmit(event) {
                 // The original event object is available to me
+                console.log(event);
             }
         }
     })
