--- a/slide-examples/15-shortcuts.html
+++ b/slide-examples/15-shortcuts.html
@@ -6,6 +6,7 @@
 
 <body>
     <div id="app">
+        <p>Shortcuts!</p>
         <p :style="{ backgroundColor:  myBackgroundColor}">v-bind: = :</p>
         <button @click="inc++">v-on:click = @</button>
         <p>Clicked {{inc}} times</p>
