--- a/slides.html
+++ b/slides.html
@@ -342,15 +342,21 @@
 					<a href="/slide-examples/26-components.html" target="_blank">Example 26</a>
 				</section>
 			</section>
-			<section>Vue SPA (plugins)
-				<section>The .vue file</section>
-				<section>Build Tools</section>
-				<section>Vue-router</section>
-				<section>Vuex</section>
-				<section>Vee-validate</section>
+			<section>
+				<h3>Vue SPA!</h3>
+				<ul>
+					<li>The .vue file</li>
+					<li>Build Tools</li>
+					<li>Debugging (Vue Chrome Plugin)</li>
+					<li>Vue-router</li>
+					<li>Vee-validate</li>
+					<li>Vuex... if we have time</li>
+				</ul>
 			</section>
-			<section>Debugging (Vue Chrome Plugin)</section>
-			<section>Questions?</section>
+			<section>
+					<h3>Thanks for listening!</h3>
+					https://github.com/murphy55555/vue-demo
+			</section>
 			</div>
 		</div>
 		<script src="node_modules/reveal.js/js/reveal.js"></script>
