tweaks to presentation

--- a/slides.html
+++ b/slides.html
@@ -45,10 +45,10 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-4">
+					<div class="col-lg-4 fragment">
 						<img src="images/cat.png">
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 fragment">
 						<div class="row">
 							<div class="col-lg-4">
 								<img src="images/pumpkin.jpg" style="margin: 20px;">
@@ -61,7 +61,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 fragment">
 						<div class="row">
 							<div class="col-lg-6">
 								<img src="images/woody.png">
@@ -74,6 +74,9 @@
 					</div>
 				</div>
 
+			</section>
+			<section>
+				<img src="images/CPL18 - Sponsor Slide.png">
 			</section>
 			<section>
 				<h2>Agenda</h2>
