Cleaned up the language a bit

--- a/slides.html
+++ b/slides.html
@@ -30,7 +30,7 @@
 					</div>
 					<div class="col-lg-6">
 						<ul>
-							<li>I'm a solution architect working for a pretty kick ass consulting company, HMB
+							<li>I'm a solution architect working for a pretty kick a$$ consulting company, HMB
 							</li>
 							<li>I do a little bit of everything</li>
 							<li>I live in Columbus, Ohio therefore that makes me a huge Ohio State Buckeye fan. It's a state law!</li>
