Minor change for Dog Food Con

--- a/slides.html
+++ b/slides.html
@@ -30,7 +30,7 @@
 					</div>
 					<div class="col-lg-6">
 						<ul>
-							<li>I'm a solution architect working for a pretty kick a$$ consulting company, HMB
+							<li>I'm the director of architecture delivery working for a pretty kick a$$ consulting company, HMB
 							</li>
 							<li>I do a little bit of everything</li>
 							<li>I live in Columbus, Ohio therefore that makes me a huge Ohio State Buckeye fan. It's a state law!</li>
@@ -75,9 +75,9 @@
 				</div>
 
 			</section>
-			<section>
+			<!-- <section>
 				<img src="images/CPL18 - Sponsor Slide.png">
-			</section>
+			</section> -->
 			<section>
 				<h2>Agenda</h2>
 				<br>
@@ -94,7 +94,8 @@
 				<div class="row">
 					<div class="col-lg-3">
 						<img src="images/bearded-dude.jpg">
-						<a href='https://www.freepik.com/free-vector/vector-pop-art-illustration-of-a-brutal-bearded-man-macho-with-tatoo_1215957.htm'>Designed by Freepik</a>
+						<a href='https://www.freepik.com/free-vector/vector-pop-art-illustration-of-a-brutal-bearded-man-macho-with-tatoo_1215957.htm'>Designed
+							by Freepik</a>
 					</div>
 					<div class="col-lg-9">
 						<p>Vue is a progressive front-end JavaScript framework that focuses on... well... the view.</p>
@@ -161,8 +162,10 @@
 				</p>
 				<br>
 				<p>
-					Don't use AngularJS on new projects. Consider using Angular if your team loves TypeScript (which is great!) and wants a full
-					featured and opinionated framework. React is uber popular and arguably more complex than Vue. Use Vue if you want simplicity
+					Don't use AngularJS on new projects. Consider using Angular if your team loves TypeScript (which is great!) and
+					wants a full
+					featured and opinionated framework. React is uber popular and arguably more complex than Vue. Use Vue if you want
+					simplicity
 					that comes with power from official plugins.
 				</p>
 			</section>
@@ -185,7 +188,8 @@
 				</section>
 				<section>
 					Vue CLI
-					<p>Vue provides a CLI (command line interface) to quickly generate new projects from templates and to even serve them up
+					<p>Vue provides a CLI (command line interface) to quickly generate new projects from templates and to even serve
+						them up
 						locally via node.js</p>
 					<pre><code class="Shell">
 							# install vue-cli
@@ -217,7 +221,8 @@
 				<section>
 					<strong>Directives Intro</strong>
 					<p>
-						These are arguably one of the best parts of AngularJS that were incorporated into Vue. They instruct the Vue engine to perform
+						These are arguably one of the best parts of AngularJS that were incorporated into Vue. They instruct the Vue
+						engine to perform
 						various transforms based upon how they are used. Most directives are prefixed with
 						<strong>v-</strong> ... The Vue guys got it right as opposed to the Angular guys...
 						<strong>ng-</strong>
@@ -300,7 +305,8 @@
 				</section>
 				<section>
 					<strong>Computed and Watchers</strong>
-					<p>Computed properties allow you to "do more" with your bound values without calling a function. Benefit??? Vue caches
+					<p>Computed properties allow you to "do more" with your bound values without calling a function. Benefit??? Vue
+						caches
 						and handles dependencies</p>
 					<a href="/slide-examples/19-computed.html" target="_blank">Example 19</a>
 					<br>
@@ -313,7 +319,8 @@
 				<span class="pull-left">Vue.js Components</span>
 				<section>
 					<strong>What the heck are components?</strong>
-					<p>Components are all the rage these days... They are old skool. Let me show what we're going to build for the rest of
+					<p>Components are all the rage these days... They are old skool. Let me show what we're going to build for the
+						rest of
 						this talk...
 						<a href="/images/components.jpg" target="_blank">My D&amp;D Sheet</a>
 						<br>All Vue components are also Vue instances
@@ -357,21 +364,21 @@
 				</ul>
 			</section>
 			<section>
-					<h3>Thanks for listening!</h3>
-					https://github.com/murphy55555/vue-demo
+				<h3>Thanks for listening!</h3>
+				https://github.com/murphy55555/vue-demo
 			</section>
-			</div>
 		</div>
-		<script src="node_modules/reveal.js/js/reveal.js"></script>
-		<script src="node_modules/jquery/dist/jquery.js"></script>
-		<script src="node_modules/bootstrap3/dist/js/bootstrap.min.js"></script>
-		<script>
-			Reveal.initialize({
-				center: false,
-				width: '100%',
-				height: '100%'
-			});
-		</script>
+	</div>
+	<script src="node_modules/reveal.js/js/reveal.js"></script>
+	<script src="node_modules/jquery/dist/jquery.js"></script>
+	<script src="node_modules/bootstrap3/dist/js/bootstrap.min.js"></script>
+	<script>
+		Reveal.initialize({
+			center: false,
+			width: '100%',
+			height: '100%'
+		});
+	</script>
 </body>
 
 </html>
